# masklint

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.githooks/: commit-msg
src/: handlers.rs  main.rs
test/: nested_maskfile.md
