[package]
name = "masklint"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
mask-parser = "0.2.2"
owo-colors = "3.5.0"
tempfile = "3.20.0"
